// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Preview 1`] = `
<div>
  <input
    type="checkbox"
    role="switch"
    id="components-switch--preview"
  >
  <label
    data-weight="regular"
    for="components-switch--preview"
  >
    En bryter
  </label>
</div>
`;

exports[`Switch In Color Context 1`] = `
<div
  data-variant="tinted"
  data-color="accent"
>
  <div>
    <input
      type="checkbox"
      role="switch"
      id="switch-in-color-context"
      checked
      aria-describedby="switch-in-color-context:description"
    >
    <label
      data-weight="regular"
      for="switch-in-color-context"
    >
      Radio
    </label>
    <div
      data-field="description"
      id="switch-in-color-context:description"
    >
      Description
    </div>
  </div>
</div>
`;
